[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "pyppetdb"
version = "0.0.0"
requires-python = ">=3.9"
authors = [
  {name = "Stephan.Schultchen", email = "stephan.schultchen@gmail.com"},
]
description = "PyppedDB is a Python replacment for PuppetDB"
dynamic = ["dependencies"]
license = {file = "LICENSE.txt"}
keywords = []
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
pyppetdb = "pyppetdb:main.main"

[tool.hatch.build.targets.wheel]
packages = ["pyppetdb"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

