[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyppetdb_dummy_plugin"
version = "0.1.0"
description = "A dummy plugin for pyppetdb Hiera plugin system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyhiera",
    "pydantic",
]

[tool.hatch.build.targets.wheel]
packages = ["pyppetdb_dummy_plugin"]
